--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "functions": {
-    "api/index.php": {
-      "runtime": "vercel-php@0.5.2"
+    "api/*.php": {
+      "runtime": "vercel-php@0.6.0"
     }
-  },
-  "routes": [
-    { "src": "/(.*)", "dest": "/api/index.php" }
-  ]
+  }
 }
